--- a/src/containers/Layout/index.css
+++ b/src/containers/Layout/index.css
@@ -97,13 +97,21 @@
   font-family: 'Karla', sans-serif;
 }
 
-.displayGrid {
+#artists .displayGrid {
+  /* display: flex;
+  flex-flow: row wrap; */
+  display: grid;
+  gap: 1vh;
+  grid-template-columns: repeat(auto-fill, minmax(20vh, auto));
+}
+
+/*.displayGrid {
   display: flex;
   flex-flow: row wrap;
   width: 100%;
 }
 
-/* .displayGrid::after {
+.displayGrid::after {
   content: "";
   flex: auto;
 } */
